--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 /UT4 - Programacion Orientada a Objetos/HolaMundo/nbproject/private/
 /UT4 - Programacion Orientada a Objetos/HolaMundo/build/
+/UT4 - Programacion Orientada a Objetos/HelloWorld/build
+/UT4 - Programacion Orientada a Objetos/HelloWorld/dist/
